all tasks shown in the homepage

--- a/task/templates/add_task.html
+++ b/task/templates/add_task.html
@@ -6,7 +6,7 @@
 <!-- block content -->
 {% block content %}
 <form class="w-50 mx-auto" method="post">
-  <h1>Add Task</h1>
+  <h1 class="text-center my-4">Add Task</h1>
 
   {% csrf_token %}
 
