--- a/templates/base.html
+++ b/templates/base.html
@@ -34,20 +34,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="{% url 'homepage' %}"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="{% url 'add_category' %}"
                 >Add Category</a
               >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'add_task' %}">Add Task</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'homepage' %}">Show Tasks</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -65,13 +60,15 @@
       </div>
     </nav>
 
-    <!-- block content -->
-    {% block content %}
+    <div class="my-4">
+      <!-- block content -->
+      {% block content %}
 
-    <h1>Hello, world!</h1>
+      <h1>Hello, world!</h1>
 
-    <!-- block content ends -->
-    {% endblock content %}
+      <!-- block content ends -->
+      {% endblock content %}
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
