--- a/category/templates/add_category.html
+++ b/category/templates/add_category.html
@@ -6,7 +6,7 @@
 <!-- block content -->
 {% block content %}
 <form class="w-50 mx-auto" method="post">
-  <h1>Add Category</h1>
+  <h1 class="text-center my-4">Add Category</h1>
 
   {% csrf_token %}
 
