--- a/templates/home.html
+++ b/templates/home.html
@@ -16,22 +16,37 @@
         <p>Task_ID: <b>{{i.task_id}}</b></p>
         <p class="card-text">Description: {{i.task_description}}</p>
 
+        <!-- categories -->
         Categories: {% for cat in i.category.all %}
         <button type="button" disabled class="btn btn-secondary btn-sm m-1">
           {{cat.category_name}}
         </button>
-        {% endfor %} {% if i.is_completed == False %}
-        <div class="mt-4 d-flex gap-3">
-          <a class="btn btn-sm btn-warning" href="#" role="button">Edit task</a>
-          <a class="btn btn-sm btn-danger" href="#" role="button"
-            >Delete task</a
-          >
+        {% endfor %}
+
+        <div class="mt-4">
+          {% if i.is_completed == False %}
+
+          <!-- action btn -->
+          <div class="d-flex gap-3">
+            <a
+              class="btn btn-sm btn-warning"
+              href="{% url 'edit_task' i.task_id %}"
+              role="button"
+              >Edit task</a
+            >
+            <a
+              class="btn btn-sm btn-danger"
+              href="{% url 'delete_task' i.task_id %}"
+              role="button"
+              >Delete task</a
+            >
+          </div>
+
+          {% else %}
+          <p>Task Status: <b>Completed</b></p>
+
+          {% endif %}
         </div>
-
-        {% else %}
-        <p>Task Status: {{i.is_completed}}</p>
-
-        {% endif %}
       </div>
     </div>
   </div>
