--- a/task/templates/add_task.html
+++ b/task/templates/add_task.html
@@ -13,7 +13,9 @@
   <!-- form -->
   {{form | crispy}}
 
-  <button class="btn btn-warning">Submit</button>
+  <div class="text-center">
+    <button class="btn btn-warning mt-5">Submit</button>
+  </div>
 </form>
 
 <!-- block content ends -->
