--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Task Management</a>
         <button
           class="navbar-toggler"
           type="button"
